# ganymede-esp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.github/: build.yml
.github/workflows/: build.yml  lint.yml
libs/: CMakeLists.txt
libs/nghttp2/: CMakeLists.txt  idf_component.yml
libs/nghttp2/port/private_include/: config.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  error.h
src/api/ganymede/services/measurements/: measurements.proto
src/api/ganymede/v2/: CMakeLists.txt  Kconfig  api.c  api.h  device.proto  measurements.proto
src/api/google/protobuf/: CMakeLists.txt
src/api/grpc/health/v1/: CMakeLists.txt
src/app/: CMakeLists.txt  Kconfig  identity.c  identity.h  lights.c  lights.h  main.c  measurements.c  measurements.h  poll.c  poll.h  poller.c  poller.h
src/app/tests/: CMakeLists.txt  main.c  test_lights.c
src/drivers/: CMakeLists.txt  am2320.c  am2320.h
src/drivers/dht/: CMakeLists.txt  dht.c  dht.mine.c  dht.mine.h
src/net/: CMakeLists.txt
src/net/auth/: CMakeLists.txt  Kconfig  auth.c  auth.h
src/net/grpc/: CMakeLists.txt  grpc.c  grpc.h  grpc_session.c  grpc_session.h
src/net/http2/: CMakeLists.txt  http2.c  http2.h
src/net/wifi/: CMakeLists.txt  Kconfig  wifi.c  wifi.h
